Fixed universal content module template news and carousel to properly implement image auto-fit + stretch option

--- a/admin/assets/less/j3x.less
+++ b/admin/assets/less/j3x.less
@@ -266,13 +266,23 @@ select {
  ******************/
 
 .controls fieldset.radio,
-.controls fieldset.checkbox,
+.controls fieldset.group-fcset.fc_input_set,
+fieldset.adminform fieldset.group-fcset.fc_input_set,
+fieldset.panelform fieldset.group-fcset.fc_input_set,
+fieldset.adminform-legacy fieldset.group-fcset.fc_input_set {
+	margin: 1px 2px 1px 6px;
+}
+
+.controls fieldset.radio,
 fieldset.adminform fieldset.radio,
 fieldset.panelform fieldset.radio,
-fieldset.adminform-legacy fieldset.radio {
+fieldset.adminform-legacy fieldset.radio,
+.controls fieldset.group-fcset.fc_input_set,
+fieldset.adminform fieldset.group-fcset.fc_input_set,
+fieldset.panelform fieldset.group-fcset.fc_input_set,
+fieldset.adminform-legacy fieldset.group-fcset.fc_input_set {
 	border: 0 none !important;
 	float: left !important;
-	margin: 1px 2px 1px 6px;
 	padding: 0px 0px !important;
 }
 
